--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -10,7 +10,7 @@
 	bottom: 0;
 	font-size: 18px;
 	font-weight:500;
-	z-index: 100000;
+	z-index: 100;
 }
 
 .sidebar-menu
@@ -22,6 +22,7 @@
 
 	font-weight:bold;
 }
+
 
 .sidebar-menu-item
 {
